--- a/css/styles.css
+++ b/css/styles.css
@@ -64,21 +64,13 @@ body {
 
 .header {
   background-color: #ececec;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  border-bottom: 1px solid #ececec;
 }
 
 .header .container {
   display: flex;
   align-items: center;
 }
-
-/* .header {
-  background-color: #ececec;
-  height: 80px;
-  display: flex;
-  align-items: center;
-} */
 
 .header-logo {
   font-family: "Raleway", sans-serif;
@@ -87,6 +79,9 @@ body {
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   margin-right: 90px;
+  padding-bottom: 25px;
+  padding-top: 25px;
+  max-height: 80px;
 }
 
 .header-logo-blue {
@@ -95,6 +90,14 @@ body {
   line-height: calc(31 / 6);
   letter-spacing: 0.03em;
   color: #2196f3;
+  padding-bottom: 25px;
+  padding-top: 25px;
+  max-height: 80px;
+}
+.header-item {
+  padding-bottom: 25px;
+  padding-top: 25px;
+  max-height: 80px;
 }
 
 .header-item-link {
@@ -158,10 +161,11 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   width: 695px;
-  display: flex;
-  align-items: center;
-  margin-left: 450px;
-  flex-direction: column;
+  padding-left: 450px;
+  padding-top: 200px;
+  margin-bottom: 30px;
+  box-sizing: content-box;
+  text-align: center;
 }
 
 .topsection-button {
@@ -173,12 +177,29 @@ body {
   color: #ffffff;
   background-color: var(--second-text-color);
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  margin-left: 700px;
+  margin-bottom: 200px;
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 /*----------------------------FEATURES------------------------*/
+
+.features-list {
+  display: flex;
+  align-items: center;
+  padding-top: 95px;
+  padding-bottom: 95px;
+}
+
+.features-item {
+  width: 270px;
+}
+
+.features-item:not(:last-child) {
+  margin-right: 30px;
+}
 
 .features-item-title {
   font-size: 14px;
@@ -186,6 +207,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-text-color);
+  margin-bottom: 10px;
 }
 
 .features-item-text {
@@ -203,6 +225,14 @@ body {
   line-height: calc(42 / 36);
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+  box-sizing: content-box;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.wwd-list {
+  display: flex;
+  align-items: center;
 }
 
 /*----------------------------TEAM------------------------*/
