--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
 /*----------------------------HEADER------------------------*/
 
 .header {
-  background-color: #ececec;
+  background-color: #ffffff;
   border-bottom: 1px solid #ececec;
 }
 
@@ -87,12 +87,9 @@ body {
 .header-logo-blue {
   font-family: "Raleway", sans-serif;
   font-size: 26px;
-  line-height: calc(31 / 6);
+  line-height: calc(31 / 26);
   letter-spacing: 0.03em;
   color: #2196f3;
-  padding-bottom: 25px;
-  padding-top: 25px;
-  max-height: 80px;
 }
 .header-item {
   padding-bottom: 25px;
@@ -230,9 +227,16 @@ body {
   margin-bottom: 50px;
 }
 
+.wwd-item {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-left: 30px;
+}
+
 .wwd-list {
   display: flex;
   align-items: center;
+  margin-left: -30px;
+  margin-bottom: 95px;
 }
 
 /*----------------------------TEAM------------------------*/
@@ -246,6 +250,26 @@ body {
   line-height: calc(42 / 36);
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+  box-sizing: content-box;
+  text-align: center;
+  margin-bottom: 50px;
+  padding-top: 95px;
+}
+
+.team-list {
+  display: flex;
+  align-items: center;
+  margin-left: -30px;
+  padding-bottom: 95px;
+}
+
+.team-item {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-left: 30px;
+  background-color: #fff;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 4px 0px #757575;
+  border-radius: 4px;
 }
 
 .team-item-title {
@@ -254,6 +278,9 @@ body {
   line-height: calc(19 / 16);
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+  box-sizing: content-box;
+  text-align: center;
+  margin-top: 30px;
 }
 
 .team-item-text {
@@ -262,11 +289,16 @@ body {
   line-height: calc(19 / 16);
   letter-spacing: 0.03em;
   color: #757575;
+  box-sizing: content-box;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 /*----------------------------FOOTER------------------------*/
 
 .footer {
+  height: 250px;
   background-color: #2f303a;
 }
 .footer-address {
@@ -281,6 +313,14 @@ body {
   line-height: calc(31 / 26);
   letter-spacing: 0.03em;
   color: #ffffff;
+  padding-top: 60px;
+}
+
+.footer-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+.footer-list {
+  margin-top: 20px;
 }
 
 .footer-logo-blue {
@@ -326,6 +366,14 @@ body {
 
 /*----------------------------GALLERY------------------------*/
 
+.gallery-buttons-list {
+  display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
 .gallery-buttons-link {
   font-family: inherit;
   font-weight: 500;
@@ -335,6 +383,35 @@ body {
   color: var(--main-text-color);
   background-color: #f5f4fa;
   cursor: pointer;
+  border: none;
+  padding: 6px 22px;
+}
+
+.gallery-buttons-item {
+  padding-top: 95px;
+}
+
+.gallery-buttons-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.gallery-list {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: -30px;
+  margin-bottom: 95px;
+}
+
+.gallery-item {
+  flex-basis: calc(100% / 3 - 60px);
+  margin: 30px;
+  border: 4px;
+  border: 1px solid #eeeeee;
+}
+.gallery-item > img {
+  display: block;
+  max-width: 100%;
 }
 
 .gallery-item-title {
@@ -342,6 +419,8 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
+  margin-top: 20px;
+  margin-left: 25px;
 }
 
 .gallery-item-text {
@@ -350,6 +429,9 @@ body {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: #757575;
+  margin-top: 4px;
+  margin-left: 25px;
+  margin-bottom: 20px;
 }
 
 .gallery-buttons-link:hover,
