--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ body {
 
 .topsection {
   background-color: #2f303a;
+  height: 600px;
 }
 
 .topsection-title {
@@ -157,12 +158,11 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  width: 695px;
-  padding-left: 450px;
   padding-top: 200px;
-  margin-bottom: 30px;
+  margin: 0 auto 30px;
   box-sizing: content-box;
   text-align: center;
+  max-width: 696px;
 }
 
 .topsection-button {
@@ -174,11 +174,18 @@ body {
   color: #ffffff;
   background-color: var(--second-text-color);
   cursor: pointer;
-  margin-left: 700px;
-  margin-bottom: 200px;
   padding: 10px 32px;
   border-radius: 4px;
   border: 1px solid transparent;
+  display: block;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 200px;
+}
+
+.top {
+  margin-bottom: 200px;
 }
 
 /*----------------------------FEATURES------------------------*/
@@ -298,7 +305,6 @@ body {
 /*----------------------------FOOTER------------------------*/
 
 .footer {
-  height: 250px;
   background-color: #2f303a;
 }
 .footer-address {
@@ -313,6 +319,7 @@ body {
   line-height: calc(31 / 26);
   letter-spacing: 0.03em;
   color: #ffffff;
+  display: block;
   padding-top: 60px;
 }
 
@@ -321,6 +328,8 @@ body {
 }
 .footer-list {
   margin-top: 20px;
+  display: block;
+  padding-bottom: 60px;
 }
 
 .footer-logo-blue {
@@ -367,7 +376,6 @@ body {
 /*----------------------------GALLERY------------------------*/
 
 .gallery-buttons-list {
-  display: flex;
   display: flex;
   align-items: center;
   justify-content: center;
