--- a/css/styles.css
+++ b/css/styles.css
@@ -148,11 +148,8 @@ body {
 
 .topsection {
   background-color: #2f303a;
-}
-
-.top-inside {
-  padding: 200px 285px 200px 285px;
-  flex-grow: 1;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .topsection-title {
@@ -187,14 +184,13 @@ body {
 
 /*----------------------------FEATURES------------------------*/
 
+.features {
+  padding-top: 95px;
+}
+
 .features-list {
   display: flex;
   align-items: center;
-}
-
-.features-inside {
-  padding-top: 95px;
-  padding-bottom: 95px;
 }
 
 .features-item {
@@ -224,7 +220,7 @@ body {
 
 /*----------------------------WWD-or-WHATWEDO------------------------*/
 
-.wwd-inside {
+.wwd {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -254,9 +250,6 @@ body {
 
 .team {
   background-color: #f5f4fa;
-}
-
-.team-inside {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -316,14 +309,11 @@ body {
 
 .footer {
   background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer-address {
   font-style: normal;
-}
-
-.footer-inside {
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .footer-logo {
@@ -388,7 +378,7 @@ body {
 
 /*----------------------------GALLERY------------------------*/
 
-.gallery-inside {
+.gallery {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -411,6 +401,8 @@ body {
   cursor: pointer;
   border: none;
   padding: 6px 22px;
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 .gallery-buttons-item:not(:last-child) {
@@ -422,7 +414,6 @@ body {
   align-items: center;
   flex-wrap: wrap;
   margin: -15px;
-  margin-bottom: 95px;
 }
 
 .gallery-item {
